# moonshot-deterministic-knowledge-structure

./: .gitignore  CONTINUUM_STATE.md  README.md  pyproject.toml  run-planning.ps1  watch-planning.ps1
prompts/: planning-condition.txt  planning-worker.txt  runtime-directive.txt
research/: DECISION_LOG.md  DESIGN.md  EVALUATION_RUBRIC.md  EXECUTION_GATE.md  FAILURE_MODES.md  INDEX.md  MENTAL_LAB_LOG.md  STATE.md  SYSTEM_THESIS.md
tests/: test_acceptance_gate.py  test_merge_result_wrapper_guard.py  test_v1_as_of_canonicalization.py  test_v1_as_of_route_guard.py  test_v1_checkpoint_segmentation_as_of.py  test_v1_checkpoint_segmentation_windows.py  test_v1_core.py  test_v1_cross_surface_consistency_as_of.py  test_v1_cross_surface_consistency_windows.py  test_v1_determinism_permutations.py  test_v1_duplicate_replay_semantics.py  test_v1_duplicate_replay_windows.py  test_v1_lifecycle_transition_permutations.py  test_v1_merge_conflict_cross_surface_consistency.py  test_v1_merge_conflict_duplicate_replay.py  test_v1_merge_conflict_input_normalization.py  test_v1_merge_conflict_input_route_guard.py  test_v1_merge_conflict_journal.py  test_v1_merge_conflict_journal_merge_api.py  test_v1_merge_conflict_journal_query_defaults.py  test_v1_merge_conflict_journal_query_replay_restart.py  test_v1_merge_conflict_journal_query_runtime_guard.py  test_v1_merge_conflict_journal_tx_consistency.py  test_v1_merge_conflict_journal_tx_consistency_replay_restart.py  test_v1_merge_conflict_journal_tx_validation.py  test_v1_merge_conflict_journal_tx_validation_guard.py  test_v1_merge_conflict_projection.py  test_v1_merge_conflict_projection_permutations.py  test_v1_merge_conflict_transition.py  test_v1_merge_conflict_transition_guard.py  test_v1_merge_conflict_transition_permutations.py  test_v1_merge_pending_transfer.py  test_v1_merge_properties.py  (+112 more)
tools/: demo.py  (+2 more)
(+13 files in other folders)
