[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dks"
version = "0.3.7"
description = "Deterministic Knowledge Structure — agentic AI memory with deterministic core"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "hypothesis>=6.0"]
pipeline = ["numpy>=1.24", "scikit-learn>=1.3", "PyMuPDF>=1.23"]
embeddings = ["sentence-transformers>=2.0"]
llm = ["openai>=1.0"]
mcp = ["mcp>=1.0"]
cli = ["click>=8.0"]
all = ["dks[pipeline,embeddings,llm,mcp,cli]"]

[project.scripts]
dks = "dks.cli:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
